# chip-8-emulator

./: CMakeLists.txt  README.md  TODO  constant .h  debug.c  debug.h  display.c  display.h  emulator.c  emulator.h  gui.c  gui.h  instruction.c  instruction.h  log.c  log.h  main.c  screen.c  screen.h  state.c  state.h  state_machine.c  state_machine.h  system.c  system.h  widget.c  widget.h
src/: constant .h  debug.c  debug.h  display.c  gui.c  instruction.c  instruction.h  main.c  raygui.h  state_machine.c  system.c  system.h  widget.h
